Fix gap in vertical page list. (#35026)

--- a/packages/block-library/src/page-list/style.scss
+++ b/packages/block-library/src/page-list/style.scss
@@ -16,7 +16,7 @@
 .is-vertical .wp-block-navigation__container,
 .is-open .wp-block-navigation__container {
 	.wp-block-page-list {
-		display: block;
+		display: flex;
 	}
 }
 
